@@ -57,6 +57,7 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - [API break] SuggestedPackage: new field 'automaticallyInstalledFlag',
         removed old field 'manuallySelected'.
       - New method 'setAutomaticallyInstalledFlag'.
+      - 'SuggestedPackage': new field 'reasonPackageNames'.
     - system/worker:
       - [API break] 'setPackagePurgeFlag': now is persistent, and should be
         called before 'setDesiredState'.
